--- a/k8s/travel-activity-deployment.yml
+++ b/k8s/travel-activity-deployment.yml
@@ -26,10 +26,9 @@ spec:
         - name: DJANGO_SETTINGS_MODULE
           value: travel_activity.settings
         - name: PYTHONPATH
-          value: /app/travel_activity
+          value: /app/travel_activity/src
         - name: DJANGO_AUTORELOAD
           value: "0"
         - name: PYTHONUNBUFFERED
           value: "1"
-        command: ["gunicorn"]
-        args: ["--workers", "1", "--bind", "0.0.0.0:8000", "travel_activity.wsgi:application"]
+        command: ["/app/start.sh"]
